client/css/less/components/widgets.less
// --------------------------------------
// Widgets
// --------------------------------------

// widget styles that are context independent
.widget {
  .clearfix;
  position: relative;

  a.add {
    float: left;
    vertical-align: top;
    display: block;
    padding: 8px 7px 5px 6px;
    text-align: center;
    color: @lightGray;
    text-decoration: none;
    border-radius: 1000px;
    border: 1px solid lighten(@lightGray, 20%);
    background: @ashGray;

    &:hover {
      background: darken(@ashGray, 5%);
    }
  }

  .add.tag-widget {
    padding: 3px 3px 1px 3px;
    margin: 6px 0;
    border-radius: 2px;
    font-size: 12px;
  }

  input {
    float: left;
    display: none;
    width: 200px;
    margin: 0;
    padding: 4px;
    font-family: @sans-serif;
    border: 1px solid @border;
    color: @darkGray;
    font-size: 14px;
    line-height: 1.5;
    resize: none;
  }

  .results-list {
    display: none;
    z-index: @zindexDropdown;
    min-width: 208px;
    position: absolute;
    top: 100%;
    left: 0;
    margin: 0;
    padding: 0;
    margin: 2px 0 0; // override default ul
    list-style: none;
    background-color: @white;

    li {
      cursor: pointer;
      border: 1px solid @border;
      border-bottom: none;
      .box-sizing(border-box);

      &:last-child {
        border-bottom: 1px solid @border;
      }

      &.active {
        background: darken(@ashGray, 2%);
      }
    }

    // Widget specific styles
    .user,
    .task {
      display: block;
      width: 100%;
      padding: 4px;
      overflow: hidden;
      white-space: nowrap;
      .clearfix();
      line-height: 25px;
      font-size: 14px;

      &:first-child {
        margin: 0;
      }

      img {
        float: left;
        margin-right: 6px;
        display: block;
        height: 25px !important;
        width: 25px !important;
      }
    }
  }
}

// Tag widget specific
.tag-widget .tags {
  display: none;
  position: absolute;
  z-index: @zindexDropdown;
  top: 100%;
  right: 18px;
  margin: 0;
  padding: 0;
  width: 200px;
  background: @ashGray;
  border: 1px solid @border;
  border-radius: 3px;
  .box-shadow(0 5px 10px rgba(0,0,0,.2));

  li {
    display: block !important;
    font-size: 14px;
    padding: 8px;
    margin: 0 !important;
    border-bottom: 1px solid @border;

    &:last-child {
      border-bottom: none;
    }

    &:hover {
      color: @white;
      background: @active;
    }
  }
}

.search-widget {
  position: relative;
  height: 27px;
  width: 360px;

  .search, .clear {
    color: @lightGray;
    line-height: 27px;
  }

  .search {
    position: absolute;
    left: 2px;
    top: 0;
    bottom: 0;
    line-height: 26px;
  }

  .clear {
    display: none;
    position: absolute;
    right: 2px;
    top: 0;
    bottom: 0;
    width: auto;
    padding: 0;
    border: none;
    background: none;
    line-height: 27px;
  }

  .search-box {
    width: 100%;
    height: 27px;
    padding: 2px 20px;
    font-size: 14px;
    color: @lightBlack;
    border-radius: 12px;
    border: 1px solid transparent;
    background: @ashGray;
    .box-sizing(border-box);

    &:focus {
      outline: none;
      border: 1px solid @active;
      .box-shadow(0 0 4px @active);
    }
  }
}

